# generate-object-from-rag

./: .gitignore  README.md  create_database.py  generate_object.py  infer_candidates.py  prompt_template.py  pyproject.toml  query_database.py
docs/: retrieved-data-per-candidate.md
models/: candidate_model.py  common_model.py  declaration_model.py  disclosures_model.py  job_model.py  studies_model.py
